# Lite3_MotionSDK

./: CMakeLists.txt  README.md  README_BUILD.md  build.sh  clean.sh  install.sh  main.cpp  run.sh  run_simple.sh
client/: CMakeLists.txt  install.sh
docs/: IMU_Processor_Guide.md  IMU_Solution_Summary.md  data_logging_usage.md  keyboard_control_guide.md  keyboard_control_implementation.md  modification_summary.md  observation_data_structure.md  velocity_calculator_usage.md
examples/: imu_processor_example.cpp
include/: data_logger.h  grpc_client.h  imu_processor.h  keyboard_controller.h  kyeboard_handler.h  robot_types.h  square_wave.h  utils.h  velocity_calculator.h
scripts/: analyze_data.py  build_proto.sh  demo_combined_analysis.py  demo_continuous_keyboard.sh  demo_keyboard_control.sh
src/: data_logger.cpp  grpc_client.cpp  imu_processor.cpp  keyboard_controller.cpp  square_wave.cpp  utils.cpp  velocity_calculator.cpp
test/: CMakeLists.txt  README.md  README_GRPC_TEST.md  README_TEST.md  README_VELOCITY_TEST.md  build_grpc_test.sh  build_velocity_integration.sh  build_velocity_test.sh  debug_imu_processor.cpp  integration_example.cpp  quick_test.sh  run_grpc_test.sh  simple_gravity_test.cpp  test_continuous_keyboard.cpp  test_data_logger.py  test_grpc_client_original.cpp  test_imu_processor.cpp  test_keyboard_controller.cpp  test_velocity_calculator.cpp  velocity_example.cpp  y_axis_verification.cpp
